<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/barlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBlanco"
            android:theme="@style/ToolBarStyle"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_seleccionar_actividad"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorBlanco"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/plan_seleccionar_actividad"
                android:textColor="@color/colorAzulElectrico"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorBlanco"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/btn_venta"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/plan_tipo_venta"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorAzul"
                        android:paddingLeft="25dp"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/btn_options"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_administrativas_venta"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/plan_tipo_administrativas_venta"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorAzul"
                        android:paddingLeft="25dp"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/btn_options"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_administrativas"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/plan_tipo_administrativas"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorAzul"
                        android:paddingLeft="25dp"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/btn_options"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/shadow" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>