<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/barlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBlanco"
            android:theme="@style/ToolBarStyle"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_seleccionar_actividad"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorBlanco"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/plan_tipo_administrativas_venta_title"
                android:textColor="@color/colorAzulElectrico"
                android:textSize="14sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorBlanco"
                android:orientation="vertical">
            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/foot_agregar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/archivos_custom_border_button"
                android:divider="@drawable/nav_custom_divider"
                android:orientation="horizontal"
                android:showDividers="middle">

                <LinearLayout
                    android:id="@+id/btn_administrativas_venta_cancelar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="6"
                        android:text="@string/btn_cancelar"
                        android:textAppearance="@style/TextAppearance.FontBold"
                        android:textColor="@color/colorBlanco"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_administrativas_venta_agendar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="6"
                        android:text="@string/btn_agendar"
                        android:textAppearance="@style/TextAppearance.FontBold"
                        android:textColor="@color/colorBlanco"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/shadow" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>