<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/barlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBlanco"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ToolBarStyle" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nested_scrolll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:scrollIndicators="right"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBlanco"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/plan_titulo_filtros"
                    android:textColor="@color/colorAzulElectrico"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/prospectos_custom_border_button"
                    android:divider="@drawable/nav_custom_divider"
                    android:orientation="vertical"
                    android:showDividers="middle">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBlanco"
                        android:orientation="vertical"
                        android:paddingTop="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="18dp"
                            android:paddingRight="16dp">

                            <TextView
                                style="@style/TextViewFormulario"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/plan_tipo_prospecto" />

                            <!--<TextView-->
                                <!--android:layout_width="wrap_content"-->
                                <!--android:layout_height="wrap_content"-->
                                <!--android:text="@string/formulario_obligatorio"-->
                                <!--android:textColor="@color/colorRojo" />-->
                        </LinearLayout>

                        <Spinner
                            android:id="@+id/spinner_plan_tipo_prospecto"
                            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:backgroundTint="@color/colorAzul" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBlanco"
                        android:orientation="vertical"
                        android:paddingTop="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="18dp"
                            android:paddingRight="16dp">

                            <TextView
                                style="@style/TextViewFormulario"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/plan_subsegmento" />

                            <!--<TextView-->
                                <!--android:layout_width="wrap_content"-->
                                <!--android:layout_height="wrap_content"-->
                                <!--android:text="@string/formulario_obligatorio"-->
                                <!--android:textColor="@color/colorRojo" />-->
                        </LinearLayout>

                        <Spinner
                            android:id="@+id/spinner_plan_subsegmento"
                            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:backgroundTint="@color/colorAzul" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBlanco"
                        android:orientation="vertical"
                        android:paddingTop="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="18dp"
                            android:paddingRight="16dp">

                            <TextView
                                style="@style/TextViewFormulario"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/plan_tipo_actividad" />

                            <!--<TextView-->
                                <!--android:layout_width="wrap_content"-->
                                <!--android:layout_height="wrap_content"-->
                                <!--android:text="@string/formulario_obligatorio"-->
                                <!--android:textColor="@color/colorRojo" />-->
                        </LinearLayout>

                        <Spinner
                            android:id="@+id/spinner_tipo_actividad"
                            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:backgroundTint="@color/colorAzul" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_plan_buscar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorAzulElectrico"
                    android:text="BUSCAR"
                    android:textColor="@color/colorBlanco" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/plan_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorBlanco"
                    android:visibility="gone" />
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <!-- Da sensación de elevación al Toolbar -->
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/shadow" />

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="gone"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>